
onClick="foo" now overrides (ie, replaces) the default onClick() function rather than attaching to it,
so widget designers should make empty onClick() functions (when appropriate).

Programmatic creation
---------------------
Create widgets via

	new dijit.Button(params, srcNodeRef)

createWidget() call removed since multiple renderers are no longer supported (see next section).

At least for the dijit widgets, all widgets are guaranteed to work programatically, which in
effect means that all widgets must have templates, unless the default <div> works.

Renderers
---------
Removed support for multiple renderers (svg & vml & a11y) for a single widget.
If a widget wants to render differently on different platforms, there must be
branching code inside the widget, or it needs to call a library that branches
based on the browser type (like dojo.gfx or dojo.charting).


Templates
---------
"this." is no longer used within ${} substitution notation.  See ticket #2905.
dojoRoot,buildScriptBase,dojoModuleUrl are no longer supported, but
any JavaScript properties on the widget's 'this' may be referenced with dotted notation.
The attributes dojoOn* are desupported (including dojoOnBuild);
also can't use id attribute to affect a dojoAttachPoint.

dojoAttachEvent is case sensitive, so capitalization matters.   You will probably have
to change

dojoAttachEvent="onClick"

to

dojoAttachEvent="onclick: onClick"

(given that the event name is lowercase, and assuming that the method name is camel case)

lists within dojoAttachPoint, dojoAttachEvent, waiRole, and waiState are now comma-separated
(not separated by semi-colons)

Parent/Child relationships
--------------------------
By default widgets exist as islands, not knowing about their parent widget or children widgets.
The exception is the destroy() function which will also delete all descendant widgets.
Some widgets like Tree and SplitContainer will know about their children, but those widgets