@@ -234,6 +234,9 @@ dojo.declare("dijit.form.ComboButton", dijit.form.DropDownButton, {
 	//		left side is normal button, right side displays menu
 	templatePath: dojo.moduleUrl("dijit.form", "templates/ComboButton.html"),
 
+	attributeMap: dojo.mixin(dojo.clone(dijit.form._FormWidget.prototype.attributeMap),
+		{id:"", name:""}),
+
 	// optionsTitle: String
 	//  text that describes the options menu (accessibility)
 	optionsTitle: "",
