@@ -1,9 +1,9 @@
 <div class="dijitDialog">
-		<div dojoAttachPoint="titleBar" class="dijitDialogTitleBar" tabindex="0" waiRole="dialog" title="${title}">
-		<span dojoAttachPoint="titleNode" class="dijitDialogTitle">${title}</span>
-		<span dojoAttachPoint="closeButtonNode" class="dijitDialogCloseIcon" dojoAttachEvent="onclick: hide">
-			<span dojoAttachPoint="closeText" class="closeText">x</span>
-		</span>
+	<div dojoAttachPoint="titleBar" class="dijitDialogTitleBar" tabindex="0" waiRole="dialog">
+	<span dojoAttachPoint="titleNode" class="dijitDialogTitle">${title}</span>
+	<span dojoAttachPoint="closeButtonNode" class="dijitDialogCloseIcon" dojoAttachEvent="onclick: hide">
+		<span dojoAttachPoint="closeText" class="closeText">x</span>
+	</span>
 	</div>
 		<div dojoAttachPoint="containerNode" class="dijitDialogPaneContent"></div>
 	<span dojoAttachPoint="tabEnd" dojoAttachEvent="onfocus:_cycleFocus" tabindex="0"></span>
